[package]
name = "oax"
version = "0.2.0"
authors = ["frofor <18nraywczifc@protonmail.com>"]
edition = "2024"
description = "A commmand-line OpenAPI execution client"
repository = "https://codeberg.org/frofor/oax"
license = "MIT"
keywords = ["openapi", "swagger", "cli"]
categories = ["command-line-utilities", "network-programming"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
inquire = "0.9.1"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "rt-multi-thread", "macros"] }
